--- a/RecordsSystem.DataAccessLayer/RecordsSystem.DataAccessLayer.csproj
+++ b/RecordsSystem.DataAccessLayer/RecordsSystem.DataAccessLayer.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
   </ItemGroup>
 
 </Project>
