Create Repo-Patern for Services in the "BusinessLogicLayer" for each entity

--- a/RecodsSystem.BusinessLogicLayer/RecodsSystem.BusinessLogicLayer.csproj
+++ b/RecodsSystem.BusinessLogicLayer/RecodsSystem.BusinessLogicLayer.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="EmployeeDetailRepository\" />
+    <Folder Include="CompanyDetailRepository\" />
+    <Folder Include="AddressDetailRepository\" />
+    <Folder Include="RecUserDetailRepository\" />
+  </ItemGroup>
+
 </Project>
