--- a/RecodsSystem.BusinessLogicLayer/RecodsSystem.BusinessLogicLayer.csproj
+++ b/RecodsSystem.BusinessLogicLayer/RecodsSystem.BusinessLogicLayer.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="EmployeeDetailRepository\" />
-    <Folder Include="CompanyDetailRepository\" />
-    <Folder Include="AddressDetailRepository\" />
-    <Folder Include="RecUserDetailRepository\" />
+    <ProjectReference Include="..\RecordsSystem.DataAccessLayer\RecordsSystem.DataAccessLayer.csproj" />
   </ItemGroup>
 
 </Project>
