--- a/RecordsSystem.PresentationLayer/RecordsSystem.csproj
+++ b/RecordsSystem.PresentationLayer/RecordsSystem.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecodsSystem.BusinessLogicLayer\RecodsSystem.BusinessLogicLayer.csproj" />
+  </ItemGroup>
+
 </Project>
