Add the "Microsoft sqlServer" &  "Tools" for Migration and add the connection string

--- a/RecordsSystem.PresentationLayer/appsettings.json
+++ b/RecordsSystem.PresentationLayer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationConnectionString": "server=VCORP-PC\\SQLEXPRESS;database=RecordsSystemDataBase;Trusted_connection=true"
+
+  }
