Renamed the conversion of "applicationDbConttext" to applicationDbContext in all my Enties Database connection string

--- a/RecordsSystem.PresentationLayer/appsettings.json
+++ b/RecordsSystem.PresentationLayer/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationConnectionString": "server=VCORP-PC\\SQLEXPRESS;database=RecordsSystemDataBase;Trusted_connection=true"
+    "ApplicationConnectionString": "server=VCORP-PC\\SQLEXPRESS;database=RecordsSystemDataBase;Trusted_connection=true;Encrypt=False;"
 
   }
+}
